Fix gap in dropdown due to fixed top height of child

--- a/frontend/src/components/PlayerList/style.module.css
+++ b/frontend/src/components/PlayerList/style.module.css
@@ -1,4 +1,4 @@
 .playerlist {
-  margin-top: 12px;
+  margin: 12px 0;
   width: 100%;
 }
